=================
Changes for crash
=================

Unreleased
==========

 - Do not try to execute sysinfo command when no servers are available.

 - Added the ``sysinfo`` command which queries the ``sys`` tables for
   system and cluster information. The command requires Crate.io >= 0.54.0

2015/12/01 0.14.3
=================

 - Python2.6/2.7 output now prints unicode strings correctly when using
   csv output format

2015/10/20 0.14.2
=================

 - Fixed an assertion error that could occur under python2.7

2015/10/18 0.14.1
=================

 - Floating point values are no longer rounded to 6 places under python2.7 if
   output using the tabular or mixed output format.
   Now the behaviour for all output formats is the same and consistent with the
   python3 output format.

   Python2.6 will still display rounded values.

 - Fixed the issue casuing parsing error while using internal ``non-sql`` crash
   commands with semicolon.

2015/09/02 0.14.0
=================

 - Fixed output tabular format bug which results in wrong representation
   of a string containing a floating point value.

 - Updated wording of the cluster check command output.

 - Added the check command which queries the ``sys.checks`` table for
   cluster checks

 - updated crate-python to 0.13.4 which includes following changes:

 - Fix urllib3 error with invalid kwargs for ``HTTPConnectionPool``
   when ``REQUESTS_CA_BUNDLE`` is set

2015/07/09 0.13.1
=================

 - added multiline support for tabular output format

2015/06/16 0.13.0
=================

 - added `dynamic` as output format option

2015/06/16 0.12.1
=================

 - display command help in case the command is not used correctly

 - display NULL values in mixed mode correctly

2015/04/28 0.12.0
=================

 - Fixed broken 'mixed' output style due to overriding import

 - Improved readability of sql syntax highlighting

 - Attempting to use unknown command now results in an error
